Network/RDNS/Sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-rdns
spec:
  template:
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.1.1.60
          - 10.1.1.61
          - 10.1.1.50
          - 10.1.1.53
      volumes:
        - configMap:
            defaultMode: 420
            name: rdns-pdns-config
          name: config
      containers:
        - env:
            - name: AUTOCONF
              value: postgres
            - name: PGSQL_HOST
              valueFrom:
                secretKeyRef:
                  key: postgres_host
                  name: ns-core-powerdns
            - name: PGSQL_PORT
              valueFrom:
                secretKeyRef:
                  key: postgres_port
                  name: ns-core-powerdns
            - name: PGSQL_USER
              valueFrom:
                secretKeyRef:
                  key: postgres_username
                  name: ns-core-powerdns
            - name: PGSQL_PASS
              valueFrom:
                secretKeyRef:
                  key: postgres_password
                  name: ns-core-powerdns
            - name: PGSQL_DB
              valueFrom:
                secretKeyRef:
                  key: postgres_database
                  name: ns-core-powerdns
            - name: PGSQL_DNSSEC
              value: 'no'
          image: 'cybiox9/powerdns:dev'
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 53
            timeoutSeconds: 1
          name: powerdns
          ports:
            - containerPort: 1053
              name: pdns-tcp
              protocol: TCP
            - containerPort: 1053
              name: pdns-udp
              protocol: UDP
          readinessProbe:
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 53
            timeoutSeconds: 1
          resources: {}
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 53
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/pdns/conf.d
              name: config
