Network/RDNS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdns-lab
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-rdns-lab
            port:
              number: 80
